--- a/Hide animation/style.css
+++ b/Hide animation/style.css
@@ -11,6 +11,14 @@ body {
   align-items: center;
   background-color: lightcoral;
 }
+.main-container {
+  width: 100%;
+  height: 10%;
+  background: blue;
+  text-decoration: underline;
+  text-transform: uppercase;
+  font-weight: bold;
+}
 .container {
   width: 200px;
   height: 30px;
